--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
     "react-scroll-parallax": "^3.4.5",
+    "tailwind-scrollbar-hide": "^4.0.0",
     "three": "^0.177.0"
   },
   "devDependencies": {
