--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-scroll": "^1.9.3",
     "react-scroll-parallax": "^3.4.5",
     "tailwind-scrollbar-hide": "^4.0.0",
-    "three": "^0.177.0"
+    "three": "^0.177.0",
+    "unframer": "^2.26.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
