Added backend code for contact form

--- a/.gitignore
+++ b/.gitignore
@@ -7,18 +7,50 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
+# Dependency directories
+node_modules/
+
+# Build output
+dist/
+dist-ssr/
+build/
+temp/
+
+# Local env files
+.env
+.env.*.local
 *.local
 
-# Editor directories and files
+# OS-specific
+.DS_Store
+Thumbs.db
+
+# Editor configs
 .vscode/*
 !.vscode/extensions.json
-.idea
-.DS_Store
+.idea/
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+# PM2 logs & ecosystem files
+pids
+*.pid
+*.seed
+*.pid.lock
+ecosystem.config.js
+
+# MongoDB data dump
+dump/
+*.tar.gz
+
+# Debugging tools
+coverage/
+nyc_output/
+.nyc_output/
+
+# Express caching or generated files
+.cache/
+.next/
