--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "postinstall": "npm install --force"
+    "postinstall": "npm install --legacy-peer-deps"
   },
   "dependencies": {
     "@react-three/drei": "^10.1.2",
